--- a/css/route-browse.css
+++ b/css/route-browse.css
@@ -6,7 +6,7 @@
   color: yellow;
   padding: 0.4rem;
   font-size: 0.8rem;
-  background-color: rgb(255, 0, 0, 0.5);
+  background-color: rgb(0, 0, 0, 0.5);
   white-space: nowrap;
 }
 
